[gd_scene load_steps=8 format=3 uid="uid://cju3y2ngfhojl"]

[ext_resource type="Script" path="res://GUI/PauseMenu/pause_menu.gd" id="1_bdvbu"]
[ext_resource type="Texture2D" uid="uid://bfhisqa5btu5x" path="res://Items/Sprites/items.png" id="2_f52ne"]
[ext_resource type="PackedScene" uid="uid://c1qumo50a7aqi" path="res://GUI/PauseMenu/Inventory/inventory_slot.tscn" id="3_hitki"]
[ext_resource type="Script" path="res://GUI/PauseMenu/Inventory/Scripts/inventory_ui.gd" id="3_siikw"]
[ext_resource type="Resource" uid="uid://iecyxwl4d3j6" path="res://GUI/PauseMenu/Inventory/player_inventory.tres" id="4_d431j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nuujb"]
atlas = ExtResource("2_f52ne")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hkqxq"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_nuujb")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_bdvbu")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.101961, 0.254902, 0.658824)

[node name="Label_Paused" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0.533333)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -119.0
offset_right = -107.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "PAUSED"

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 56.0
offset_right = 220.0
offset_bottom = 144.0
theme_override_styles/panel = SubResource("StyleBoxTexture_hkqxq")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_siikw")
data = ExtResource("4_d431j")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_hitki")]
layout_mode = 2

[node name="SaveLoadBox" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = 89.0
offset_right = -16.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button_Save" type="Button" parent="Control/SaveLoadBox"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "SAVE"

[node name="Button_Load" type="Button" parent="Control/SaveLoadBox"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "LOAD"

[node name="ItemDescription" type="Label" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 148.0
offset_right = 208.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
autowrap_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
max_polyphony = 4
bus = &"SFX"
